syntax = "proto3";

package users;

service users{
    rpc AddUser (UserRequest) returns (Response);
    rpc GetUser (UserRequestId) returns (Response);
    rpc RemoveUser (UserRequestId) returns (Response);
    rpc UpdateUser (UserRequest) returns (Response);
}


message UserRequestId {
    uint32 id = 1;
}

message UserRequest {
    uint32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message Response {
    uint32 key =1;
    string messsage = 2;
    string data = 3;
}